--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,46 @@
-### Miscellaneous.
+# History files
+.Rhistory
+.Rapp.history
+
+# Session Data files
+.RData
+
+# User-specific files
+.Ruserdata
+
+# Example code in package build process
+*-Ex.R
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# R Environment Variables
+.Renviron
+
+# Data files to exclude
+*.feather
+*.csv
+*.RData
 
 *.DS_Store
-
-### R.
-
-*.Rproj.user
-*.Rhistory
-*.RData
-*.Ruserdata
-
-
-### Storage.
-
-*.RData
-*.xls
-*.xlsx
-*.csv
-*.txt
-*.tsv
-*.psv
-
-### R Markdown.
-
-*.toc
-*.nav
-*.out
-*.aux
-*.snm
-*.vrb
-
-### LaTeX.
-
-*.log
-*.synctex.gz
-*.out
-*.aux
-*.log
-*.bbl
-*.blg
-*.bib
-.Rproj.user
